# mtap

./: .clang-format  .gitignore  CMakeLists.txt  README.md  conanfile.py
include/: mtap.hpp
include/mtap/: fixed_string.hpp  function_view.hpp  meta_helpers.hpp  mtap.hpp  option.hpp
test/: LICENSE.md  example.cpp  one-arg.cpp
